fixed backend channels url and frontend profile not aligned error

--- a/frontend/src/components/pages/chat/chat.css
+++ b/frontend/src/components/pages/chat/chat.css
@@ -244,7 +244,6 @@
     border-radius: 20px;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.1);
     padding: 3px 20px;
-    margin-bottom: 32px;
     margin-right: 15px;
     word-break: break-all;
     font-size: 1.4rem;
@@ -257,7 +256,6 @@
     display: block;
     position: relative;
     float: right;
-    top: -28px;
     padding-right: 75px;
     font-size: 15px;
     margin-top: 0px;
@@ -280,7 +278,6 @@
     border-radius: 20px;
     box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.1);
     padding: 3px 20px;
-    margin-bottom: 32px;
     margin-left: 15px;
     word-break: break-all;
     font-size: 1.4rem;
@@ -292,7 +289,6 @@
 .messages .messages-list .createdTime {
     display: block;
     position: relative;
-    top: -28px;
     width: 100%;
     padding-left: 75px;
     font-size: 15px;
